2006-12-21  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS, src/munged/conf.c, src/munged/munged.8.in:
	  Changed --check-group-mtime to --group-check-mtime.

	* src/munged/gids.c: Added gids map timing information to log message.

	* HISTORY, META, NEWS: Updated for 0.5.7 release.

2006-12-20  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_dump_uid_hash): Tweaked debug table header.

	* src/munged/gids.c: Removed the need for casting the gids hash key
	  uid_t to a gid_t by making the gids hash return a struct gids_head
	  that points to a singly-linked list of struct gids_nodes.

	* src/munged/munged.8.in: Tweaked notes section.

2006-12-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.8.in: Tweaked docs for --group-update-time.

	* src/munged/conf.c:
	  Added --check-group-mtime and --group-update-time.
	* src/munged/munged.8.in:
	  Documented --check-group-mtime and --group-update-time.
	* src/munged/gids.c (gids_create): Added log messages.
	* src/munged/gids.h: Added GIDS_GROUP_FILE from gids.c.
	* src/munged/munged.c (main): Moved gids_create() lower.

	* src/libcommon/munge_defs.h: Tweaked comment.

	* src/libcommon/munge_defs.h:
	  Renamed MUNGE_GROUP_PARSE_TIMER to MUNGE_GROUP_UPDATE_TIMER.
	* src/munged/conf.c (create_conf):
	  Changed MUNGE_GROUP_PARSE_TIMER to MUNGE_GROUP_UPDATE_TIMER.

	* src/munged/munged.c (main): Moved handle_signals() to after
	  daemonize_init().
	* src/munged/munged.c (hup_handler): Added to invoke gids_update().
	* src/munged/gids.h: Changed prototype for gids_create().
	  Added gids_update().
	* src/munged/gids.c (gids_create): Initialized timer, interval, and
	  do_group_stat vars that were added to struct gids.
	* src/munged/gids.c (gids_update): Added public function to schedule
	  an immediate update.
	* src/munged/gids.c (_gids_update): Set do_group_stat flag to -1 on
	  stat() error, and resurrect it in gids_update() if enabled.
	* src/munged/conf.c (create_conf): Set conf flags via "!!" to ensure